# knewnew-project

./: README.md  manage.py  pull_request_template.md  pyproject.toml
api/: urls.py
api/review/: serializers.py  urls.py  views.py
api/user/: serializers.py  urls.py  views.py
app/core/: models.py
app/review/: apps.py  models.py
app/review/migrations/: 0001_initial.py  0002_initial.py  0003_reviewimage.py  0004_comment_is_updated_review_comment_count_and_more.py  0005_review_food_tags_delete_reviewfoodtag.py  0006_comment_user_likes.py  0007_review_user_bookmarks_review_user_likes_and_more.py  0008_alter_review_user_bookmarks_alter_review_user_likes.py  0009_alter_review_product_alter_review_retailer.py
app/user/: models.py
app/user/migrations/: 0001_initial.py  0002_rename_tag_userintroductiontag_introduction_tag.py  0003_user_introduction_tag_delete_userintroductiontag.py  0004_remove_user_introduction_tag_user_introduction_tags_and_more.py  0005_alter_usercommentlike_table_and_more.py  0006_user_last_login_user_password.py
config/: settings.py  urls.py
